Bug 325946 - Changes to Configure Decoration dialog not able to be applied
Summary: Changes to Configure Decoration dialog not able to be applied
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: decorations (other bugs)
Version First Reported In: 4.11.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/113...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-13 07:13 UTC by Travis Evans
Modified: 2013-10-20 18:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Travis Evans 2013-10-13 07:13:17 UTC
In System Settings > Window decorations, if Configure Decoration is pressed and changes made, the Apply button does not get enabled and the settings are not applied as they are for the Configure Buttons dialog.

Reproducible: Always

Steps to Reproduce:
1. Open System Settings > Window decorations
2. Click Configure Decoration, make changes, click OK

Actual Results:  
Apply button remains greyed. No changes are made. It is necessary to make some other change (e.g., Configure Buttons) to enable the Apply button so that the changes can be applied.

Expected Results:  
Apply button should have been enabled; clicking should have applied the new settings.
Comment 1 Thomas Lübking 2013-10-13 08:27:28 UTC
For what decoration?
The deco config dialogs used to impact the decos internally (when you close them by "ok") and this only fails for the Laptop decoration here.
Comment 2 Travis Evans 2013-10-13 08:42:40 UTC
It seems to be happening with all of them for me.
Comment 3 Thomas Lübking 2013-10-13 11:14:30 UTC
Affected:
-----------
* Aurorae (GHNS decos)
* B2
* Laptop

Not affected:
----------------
* Oxygen
* Bespin
* Plastik (QML)
* QtCurve
* Skulpture
Comment 4 Thomas Lübking 2013-10-13 13:52:30 UTC
Broken all over the place ;-)
Comment 5 Thomas Lübking 2013-10-20 18:02:31 UTC
Git commit 0106419476094f560f11ec404bfb4eebe5c4cde7 by Thomas Lübking.
Committed on 13/10/2013 at 13:52.
Pushed by luebking into branch 'KDE/4.11'.

fix deco config updates

- B2 linked to the wrong slot (instead of changed signal)
- border size change was not written (for B2, Laptop etc)
- Aurorae didn't recreate decos when required
FIXED-IN: 4.11.3
REVIEW: 113229

M  +2    -2    kwin/clients/aurorae/src/aurorae.cpp
M  +4    -8    kwin/clients/b2/config/config.cpp
M  +3    -0    kwin/kcmkwin/kwindecoration/configdialog.cpp
M  +2    -0    kwin/kcmkwin/kwindecoration/configdialog.h
M  +1    -3    kwin/kcmkwin/kwindecoration/kwindecoration.cpp

http://commits.kde.org/kde-workspace/0106419476094f560f11ec404bfb4eebe5c4cde7